<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="#111111">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.management.GearDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Gear name"
                android:textColor="#a0a5b8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_item_name"
                    style="@style/EditorFieldStyle"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Gear owner"
                android:textColor="#a0a5b8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_owner_name"
                    style="@style/EditorFieldStyle"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Insurance date"
                android:textColor="#a0a5b8"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_insurance_date"
                    style="@style/EditorFieldStyle"
                    android:inputType="date" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Warranty date"
                android:textColor="#a0a5b8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_warranty_date"
                    style="@style/EditorFieldStyle"
                    android:inputType="date" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Price"
                android:textColor="#a0a5b8"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_item_unit"
                    style="@style/EditorUnitsStyle"
                    android:text="$" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Gear detail"
                android:textColor="#a0a5b8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_detail"
                    android:gravity="top|left"
                    android:lines="3"
                    style="@style/EditorFieldStyle"
                    android:inputType="textMultiLine" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="Add gear picture"
                android:textColor="#a0a5b8"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <ImageView
                    android:id="@+id/gear_photo"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"/>

            </LinearLayout>
        </LinearLayout>



        <RelativeLayout
            android:id="@+id/gear_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="76dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:text="Save"
                android:textColor="@color/White"
                android:drawableRight="@drawable/ic_done"
                android:drawablePadding= "-48dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/gear_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar">

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="76dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:text="Delete"
                android:textColor="@color/White"
                android:drawableRight="@drawable/ic_delete"
                android:drawablePadding="-48dp" />


        </RelativeLayout>


    </LinearLayout>
</ScrollView>
