...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomBar">
            <include layout="@layout/activity_management_center" />

            <Button
                android:id="@+id/button_AddGear"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="76dp"
...
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimary"
                android:text="Add"
                android:textColor="@color/White"/>

            <ListView
                android:id="@+id/list_view_gears"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:layout_above="@id/button_AddGear" />


...
